# order-service/src/main/resources/openapi/order-service.yml
@@ -26,7 +26,6 @@ paths:
           application/json:
             schema:
               $ref: '#/components/schemas/AddressDto'
-      description: ''
   /api/address/:
     get:
       summary: getAllAddress
@@ -53,7 +52,9 @@ paths:
     delete:
       summary: deleteAddress
       operationId: deleteAddress
-      responses: {}
+      responses:
+        '200':
+          description: OK
       tags:
         - address-controller
       description: ''
@@ -112,6 +113,7 @@ paths:
                 $ref: '#/components/schemas/OrderDto'
       operationId: findOrder
       description: ''
+      parameters: []
   /api/order/acceptOrder:
     parameters: []
     post:
@@ -138,6 +140,73 @@ paths:
           required: true
       tags:
         - order-controller
+  /api/order/addItemToOrder:
+    post:
+      summary: addItemToOrder
+      operationId: addItemToOrder
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/OrderDto'
+      parameters:
+        - schema:
+            type: integer
+            format: int64
+          in: query
+          name: orderId
+          required: true
+        - schema:
+            type: integer
+            format: int64
+          in: query
+          name: productId
+          required: true
+        - schema:
+            type: integer
+          in: query
+          name: piece
+      tags:
+        - order-controller
+  '/api/order/{id}':
+    parameters:
+      - schema:
+          type: integer
+          format: int64
+        name: id
+        in: path
+        required: true
+    delete:
+      summary: deleteOrder
+      operationId: deleteOrder
+      responses:
+        '200':
+          description: OK
+      tags:
+        - order-controller
+  '/api/order/findByUser/{id}':
+    parameters:
+      - schema:
+          type: integer
+          format: int64
+        name: id
+        in: path
+        required: true
+    get:
+      summary: findByUserId
+      tags:
+        - order-controller
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/OrderDto'
+      operationId: findByUserId
+      description: ''
 components:
   schemas:
     AddressDto:
@@ -169,9 +238,9 @@ components:
         userId:
           type: integer
           format: int64
-        price:
+        priceSum:
           type: integer
-        piece:
+        piecesSum:
           type: integer
         orderStatus:
           $ref: '#/components/schemas/OrderStatuses'
@@ -182,6 +251,10 @@ components:
         deliveryDate:
           type: string
           format: date
+        orderItem:
+          type: array
+          items:
+            $ref: '#/components/schemas/OrderedItemDto'
     OrderStatuses:
       title: OrderStatuses
       x-stoplight:
@@ -199,4 +272,47 @@ components:
         productName:
           type: string
         productPrice:
+          type: integer
+        piece:
+          type: integer
+    CatalogDto:
+      title: CatalogDto
+      x-stoplight:
+        id: moyogb2583xrn
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        productName:
+          type: string
+        productPrice:
+          type: integer
+        category:
+          $ref: '#/components/schemas/CategoryDto'
+    CategoryDto:
+      title: CategoryDto
+      x-stoplight:
+        id: 5i0j2qs7p9udw
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        categoryName:
+          type: string
+    OrderedItemDto:
+      title: OrderedItemDto
+      x-stoplight:
+        id: hoc995ee8xuj6
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        productName:
+          type: string
+        productPrice:
+          type: integer
+        piece:
           type: integer
